--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,2 @@
-
-writable/debugbar/debugbar_1731348163.705766.json
-writable/debugbar/debugbar_1731348165.727319.json
-writable/debugbar/debugbar_1731348165.818876.json
-writable/debugbar/debugbar_1731348180.228954.json
-writable/debugbar/debugbar_1731348180.570516.json
-writable/debugbar/debugbar_1731348182.018700.json
-writable/debugbar/debugbar_1731348182.112220.json
-writable/debugbar/debugbar_1731348184.642025.json
-writable/debugbar/debugbar_1731348184.738951.json
-writable/debugbar/debugbar_1731348186.143882.json
-writable/debugbar/debugbar_1731348188.008454.json
-writable/debugbar/debugbar_1731348194.623226.json
-writable/debugbar/debugbar_1731348194.756892.json
-writable/debugbar/debugbar_1731348197.178803.json
-writable/debugbar/debugbar_1731348200.236118.json
-writable/debugbar/debugbar_1731348201.990282.json
-writable/debugbar/debugbar_1731348205.544347.json
-writable/debugbar/debugbar_1731348206.988481.json
-writable/debugbar/debugbar_1731348208.141454.json
-writable/debugbar/debugbar_1731348208.271817.json
-writable/logs/log-2024-11-11.log
-writable/session/ci_session2eg5vsu0ji8hf0plqqtrskm46284uhkv
-writable/session/ci_session5jq0dt80sm0fm22agjjk2io6rnuecict
-writable/session/ci_session83015q2675ndg3gijd3js4cpl88p585r
-writable/session/ci_sessionffjaj7rbevrmcefobog9p75qakvcf707
-writable/session/ci_sessiongam8nfq3u96g7sd6l8uk8qi8ritbl3ej
-writable/session/ci_sessionh1c6epo75efg6p2uepe3tu3idglbe0hi
-writable/session/ci_sessionqt7rdc7gfsk6e8ouspmugt13opbm3j0v
-writable/session/ci_sessionrcd6r413modums6jv0m9tliv1io20sq8
+writable/session/
+writable/debugbar/
